# Crazy_Breakout

./: CMakeLists.txt  Cliente.cpp  Cliente.h  Doxyfile  Server.cpp  Server.h  main.cpp  mainCliente.cpp  screen.cpp  screen.h
InGame/: brick.cpp  brick.h  brickFactory.cpp  brickFactory.h  gameBall.cpp  gameBall.h  gameBar.cpp  gameBar.h  screen.cpp  screen.h
html/: _cliente_8cpp.html  _cliente_8h.html  _cliente_8h_source.html  _server_8cpp.html  _server_8h.html  _server_8h_source.html  annotated.html  class_cliente-members.html  class_cliente.html  class_server-members.html  class_server.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  main_cliente_8cpp.html  menudata.js  structdata_socket-members.html  structdata_socket.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js
latex/: _cliente_8cpp.tex  _cliente_8h.tex  _cliente_8h_source.tex  _server_8cpp.tex  _server_8h.tex  _server_8h_source.tex  annotated.tex  class_cliente.tex  class_server.tex  files.tex  main_8cpp.tex  main_cliente_8cpp.tex  refman.tex  structdata_socket.tex
